src/css/styles.css
/* ... */
.aside .nav-toggler span::after {
    content: '';
    height: 2px;
    width: 18px;
    background: var(--skin-color);
    position: absolute;
    top: 6px;
    left: 0;
}

.aside .nav-toggler.open span {
    background-color: transparent;
}

.aside .nav-toggler.open span::before {
    transform: rotate(45deg);
    top: 0;
}

.aside .nav-toggler.open span::after {
    transform: rotate(-45deg);
    top: 0;
}



.aside .nav {
    margin-top: 50px;
}

.aside .nav li {
    margin-bottom: 20px;
    display: block;
}

.aside .nav li a {
    font-size: 16px;
    font-weight: 600;
    display: block;
    border-bottom: 1px solid var(--bg-black-50);
    color: var(--text-black-900);
    padding: 5px 15px;
}

.aside .nav li a.active {
    color: var(--skin-color);
}

.aside .nav li a i {
    margin-right: 15px;
}

/******************** Home ****************/

.home {
    min-height: 100vh;
    display: flex;
    color: var(--text-black-900);
}

.home .home-info {
    flex: 0 0 60%;
    max-width: 60%;
}

h3.hello {
    font-size: 28px;
    margin: 15px 0;
}

h3.hello span {
    font-family: 'clicker script', cursive;
    font-size: 30px;
    font-weight: 700;
    color: var(--skin-color);
}

h3.my-profession {
    font-size: 30px;
    margin: 15px 0;
}

.typing {
    color: var(--skin-color);
}

.home-info p {
    margin-bottom: 70px;
    font-size: 20px;
    /* font-weight: 500; */
    color: var(--text-black-700);
}

.home .home-img {
    flex: 0 0 40%;
    max-width: 40%;
    text-align: center;
    position: relative;
}

.home-img::before {
    content: '';
    position: absolute;
    height: 80px;
    width: 80px;
    border-top: 10px solid var(--skin-color);
    border-left: 10px solid var(--skin-color);
    left: 40px;
    top: -40px;
}

.home-img::after {
    content: '';
    position: absolute;
    height: 80px;
    width: 80px;
    border-bottom: 10px solid var(--skin-color);
    border-right: 10px solid var(--skin-color);
    right: 40px;
    bottom: -40px;
}

.home .home-img img {
    margin: auto;
    border-radius: 5px;
    height: 350px;
    width: 250px;
    /* border-radius: 50%; */
}

.about .about-content {
    flex: 0 0 100%;
    max-width: 100%;


}

.about .about-content .about-text {
    flex: 0 0 100%;
    max-width: 100%;
}

.about .about-content .about-text h3 {
    font-size: 24px;
    margin-bottom: 15px;
    font-weight: 700;
    color: var(--text-black-900);
}

.about .about-content .about-text h3 span {
    color: var(--skin-color);
}

.about .about-content .about-text p {
    font-size: 16px;
    line-height: 25px;
    color: var(--text-black-700);
}

.about .about-content .personal-info {
    flex: 0 0 60%;
    max-width: 60%;
    margin-top: 40px;
}

.about .about-content .personal-info .info-item {
    flex: 0 0 50%;
    max-width: 50%;
}

.about .about-content .personal-info .info-item p {
    font-weight: 600;
    padding: 10px 0;
    font-size: 16px;
    color: var(--text-black-900);
    border-bottom: 1px solid var(--bg-black-50);
}

.about .about-content .personal-info .info-item p span {
    font-weight: 400;
    color: var(--text-black-700);
    margin-left: 4px;
    display: inline-block;
}

.about .about-content .personal-info .buttons {
    margin-top: 30px;
}

.about .about-content .personal-info .buttons .btn {
    margin-right: 15px;
    margin-top: 10px;
}

.about .about-content .skills {
    flex: 0 0 40%;
    max-width: 40%;
    margin-top: 40px;
}

.about .about-content .skills .skill-item {
    flex: 0 0 100%;
    max-width: 100%;
    margin-bottom: 25px;
}

.about .about-content .skills .skill-item h5 {
    line-height: 40px;
    font-weight: 600;
    font-size: 16px;
    color: var(--text-black-900);
    text-transform: capitalize;
}

.about .about-content .skills .skill-item .progress {
    background-color: var(--bg-black-50);
    height: 7px;
    border-radius: 4px;
    width: 100%;
    position: relative;
}

.about .about-content .skills .skill-item .progress .progress-in {
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    border-radius: 4px;
    background-color: var(--skin-color);
}

.about .about-content .education,
.about .about-content .experience {
    flex: 0 0 50%;
    max-width: 50%;
    margin-top: 30px;
}

.about .about-content h3.title {
    font-size: 24px;
    margin-top: 30px;
    font-weight: 700;
    color: var(--text-black-900);
}

.about .about-content .timeline-box {
    flex: 0 0 100%;
    max-width: 100%;
}

.about .about-content .timeline {
    background-color: var(--big-black-100);
    padding: 30px 15px;
    border: 1px solid var(--bg-black-50);
    border-radius: 10px;
    width: 100%;
    position: relative;
}

.about .about-content .timeline .timeline-item {
    position: relative;
    padding-left: 37px;
    padding-bottom: 50px;
}

.about .about-content .timeline .timeline-item:last-child {
    padding-bottom: 0;
}

.about .about-content .timeline .timeline-item::before {
    content: '';
    width: 1px;
    position: absolute;
    height: 100%;
    left: 7px;
    top: 0;
    background-color: var(--skin-color);
}

.about .about-content .timeline .circle-dot {
    position: absolute;
    left: 0;
    top: 0;
    height: 15px;
    width: 15px;
    border-radius: 50%;
    background-color: var(--skin-color);
}

.about .about-content .timeline .timeline-date {
    font-weight: 400;
    font-size: 14px;
    margin-bottom: 12px;
    color: var(--text-black-700);
}

.about .about-content .timeline .timeline-date .fa {
    margin-right: 5px;
}

.about .about-content .timeline .timeline-title {
    font-weight: 700;
    font-size: 18px;
    margin-bottom: 15px;
    text-transform: capitalize;
    color: var(--text-black-900);
}

.about .about-content .timeline .timeline-text {
    line-height: 25px;
    font-size: 16px;
    text-align: justify;
    color: var(--text-black-700);
}

/* ********** Services ********** */

.service .container {
    padding-bottom: 40px;
}
/* ... */

